<resources>
    <string name="app_name">PlayDate</string>
    <string name="search">Search</string>
    <string name="search_here">Search here…</string>
    <string name="search_user">Search user</string>
    <string name="enter_search_query">Enter search query</string>
    <string name="no_results">No results</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="filter_normal">Normal</string>
    <string name="facebook_app_id">774666393441925</string>
    <string name="fb_login_protocol_scheme">fb774666393441925</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">pW3SwJXTv4EcNjuAhbhHzzh8R</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">jBXImapA3VtYJLD5oKRfLmtRolwINJGmzUfmJbJZLgy5lTt64H</string>
    <string name="get_started">Get Started</string>
    <string name="reject_date">Reject Date</string>
    <string name="no_notification">No New Notifications</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="REGISTER">REGISTER</string>
    <string name="Username">Email / Mobile Number</string>
    <string name="FullName">Full Name</string>
    <string name="Address">Address</string>
    <string name="PhoneNo">Phone No</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="next">Next</string>
    <string name="forget_pswrd">Forget Your Password ?</string>
    <string name="or">OR</string>
    <string name="game_coin">Game Coins</string>
    <string name="date_coin">Date Coins</string>
    <string name="multiplier">Multiplier Boosters</string>
    <string name="dm">DM Boosters</string>
    <string name="didn_t_get_a_code">Didn\'t get a code?</string>
    <string name="resend"><u>Resend</u></string>
    <string name="we_sent_a_code">We Sent A Code</string>
    <string name="please_enter_the_verification_code">Please enter the verification code</string>
    <string name="please_enter_the_dob">Please enter your date of birth</string>
    <string name="please_enter_the_start_date">Please enter the date the business has started</string>
    <string name="that_has_been_sent_to_you_via_sms_at">that has been sent to you via SMS at</string>
    <string name="age_verification">Age Verification</string>
    <string name="business_start_date">Business Starting Date</string>
    <string name="relationship">Relationship</string>
    <string name="interestin">Interested In</string>
    <string name="relationship_desc">Please select your relationship status</string>
    <string name="interest">Interests</string>
    <string name="interest_desc">Please select your interests</string>
    <string name="single">SINGLE</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="non_binary">NON - BINARY</string>
    <string name="taken">TAKEN</string>
    <string name="Send">Reset Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_select_your_relationship_status">Please select your relationship status</string>
    <string name="please_select_your_sex_orie">Please select your sex orientation</string>
    <string name="please_select_interest">Please select your interests</string>
    <string name="please_upload">Please upload a profile picture</string>
    <string name="please_upload_business">Please upload a photo of your business</string>
    <string name="create_username">Create username</string>
    <string name="create_couplename">Create couple name</string>
    <string name="search_for_a_username_to_display_on_your_profile">Search for a username to display on your profile</string>
    <string name="search_for_a_couplename_to_display_on_your_profile">Search for a couple name to display on your profile</string>
    <string name="personal_bio">Personal Bio</string>
    <string name="couple_bio">Couple Bio</string>
    <string name="business_bio">Business Bio</string>
    <string name="forgot_string">Enter registered mobile number</string>
    <string name="write_a_short_bio_that_will_be_displayed_on_your_profile">Write a short bio that will be displayed on your profile</string>
    <string name="write_a_short_bio_about_your_business">Write a short bio about your business</string>
    <string name="couple_short_note">Tell your friends how you and your partner met</string>
    <string name="business_short_note">Tell your friends about your business</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="couple_profile_picture">Couple Profile Picture</string>
    <string name="business_picture">Business photo</string>
    <string name="upload">Upload</string>
    <string name="take_photo">TAKE PHOTO</string>
    <string name="change_image">Change Image</string>
    <string name="restaurants">Restaurants</string>
    <string name="Invite">Invite</string>
    <string name="Like">Like</string>
    <string name="reply">Reply</string>
    <string name="anonymous">Anonymous Question</string>
    <string name="comments">Comments</string>
    <string name="Suggested">Suggested</string>
    <string name="please_select_your_favourite_place_to_eat">Please select your favourite place to eat</string>
    <string name="see_more_suggestions"><u>See More Suggestions</u></string>
    <string name="str_temp"><b>MariaGomes213</b> Nice weather to showoffmy new sunglasses\n<b>DeanSean</b> Haha , I did the same lol\n<b>KellyFinn92</b> My bestie is looking gooooood!</string>
    <string name="add_new_payment_method">Add New Payment Method</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="premiun_upgrade">Premiun Plan Upgrade</string>
    <string name="post">Post</string>
    <string name="coupon_unavailable">No Coupons available \nfor this Restaurant</string>
    <string name="scan_card">Scan Card</string>
    <string name="send_invite">Send Invite</string>
    <string name="keep_looking1">Keep Looking</string>
    <string name="send_msg">Send Message</string>
    <string name="create_date">Create Date</string>
    <string name="buy_coins">Buy Coins</string>
    <string name="send_coins">Send Coins</string>
    <string name="confirm">Confirm</string>
    <string name="keep_playing">Keep Playing</string>
    <string name="finish_date">Finish Date</string>
    <string name="use_date_coin">Use Date Coin</string>
    <string name="use_game_coin">Use Game Coin</string>
    <string name="proceed">Proceed</string>
    <string name="popular">Popular</string>
    <string name="hope_you_had">Hope you had a great time!</string>
    <string name="new_games">New Games</string>
    <string name="trending">Trending</string>
    <string name="accept_date">Accept Date</string>
    <string name="search_date_partner">Search Date Partner</string>
    <string name="comment_deleted">Comment has been deleted</string>
    <string name="add_comment">Add a comment…</string>
    <string name="refer_your_friend">Refer your Friends and Earn Points</string>
    <string name="earn_point">and Earn Points</string>
    <string name="coupons_generator">Coupon Generator</string>
    <string name="play_and_earn">Play and Earn \n</string>
    <string name="ur_discount">Your Discount Coupon</string>
    <string name="points">100 Points</string>
    <string name="get_code">GET CODE</string>
    <string name="getting_ur_location">Getting your location…</string>
    <string name="earn_points">EARN MORE POINTS</string>
    <string name="something_went_wrong">Uh oh… \nSomething went wrong</string>
    <string name="dont_have_enough_points">It looks like you don\'t have enough points to purchase this coupon</string>
    <string name="share_code">Share Coupon Code via</string>
    <string name="every_time">Every time one of your friends signs up, you will both receive 25 Points !</string>
    <string name="every_points">Earn more points by playing Dating Games or by answering Small Talk and Deep Talk !</string>
    <string name="notification">Notification</string>
    <string name="commenting">Turn Commenting Off</string>
    <string name="block_user">Block User</string>
    <string name="unblock_user">Unblock User</string>
    <string name="report">Report Comment</string>
    <string name="delete_message">Delete message</string>
    <string name="delete_chat">Delete Chat</string>
    <string name="view_profile">View Profile</string>
    <string name="pin">Pin Comment</string>
    <string name="undo">Undo</string>
    <string name="post_notification">Turn Post Notification ON</string>
    <string name="post_on">Turn Post ON For This User</string>
    <string name="text_here">Type your text</string>
    <string name="which_one_are_you">Which one are you?</string>
    <string name="gender">Gender</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="Mobile">Mobile Number</string>
    <string name="winner">Winner!</string>
    <string name="level">LEVEL 1</string>
    <string name="card_no">CARD NUMBER</string>
    <string name="card_hlder">CARDHOLDERS NAME</string>
    <string name="save_credit_information">Save credit card information</string>
    <string name="ans_first">You answered first!</string>
    <string name="select_restaurant">Select Restaurant</string>
    <string name="select_date">Select Date</string>
    <string name="waiting_partner">Waiting for partner</string>
    <string name="accepted_patner">Partner has accepted</string>
    <string name="copy">Copy </string>
    <string name="frequently_asked">Frequently Asked Questions</string>
    <string name="code">Code</string>
    <string name="title_activity_maps">Map</string>
    <string name="phone_number">Phone Number</string>
    <string name="more_suggestion">See More Suggestions</string>
    <string name="moresugesstion_foru">Suggestions For You</string>
    <string name="sarchfriendhere">Connect with friends, Search them Now</string>
    <string name="join">Join</string>
    <string name="delete_notification">Delete Notification</string>
    <string name="please_type">Please type it below</string>
    <string name="invite_code">Your Invite Code</string>
    <string name="invite_sent">Invite Sent</string>
    <string name="invite_code_desc">An Invitation contain a code which has been Sent to you by your partner.</string>
    <string name="connect">Connect with your partner</string>
    <string name="invite_partner">Invite partner</string>
    <string name="connect_desc">Please select an action for your partner</string>
    <string name="invite_desc">Start a couple with your partner on playdate</string>
    <string name="result_image_desc">crop result</string>
    <string name="main_drawer_load">Load Image for cropping</string>
    <string name="main_drawer_open">Open navigation drawer</string>
    <string name="main_drawer_close">Close navigation drawer</string>
    <string name="main_action_crop">CROP</string>
    <string name="main_action_rotate">Rotate 90 degrees clockwise</string>
    <string name="main_action_flip">Flip</string>
    <string name="main_action_flip_horizontally">Flip horizontally</string>
    <string name="main_action_flip_vertically">Flip vertically</string>
    <string name="drawer_option_title">Crop View Presets</string>
    <string name="drawer_option_oval">Circular</string>
    <string name="drawer_option_rect">Rectangular</string>
    <string name="drawer_option_min_max">Min/Max limits override</string>
    <string name="drawer_option_customized_overlay">Customized Overlay</string>
    <string name="drawer_option_scale_center">Scale Center Inside</string>
    <string name="drawer_option_title2">Customization Toggles</string>
    <string name="drawer_option_toggle_scale">Image Scale: %1s</string>
</resources>