<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="OTPViewModel"
            type="com.playdate.app.ui.register.otp.OTPViewModel" />


    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center"
            android:padding="@dimen/_2sdp"
            android:layout_margin="@dimen/_15sdp"
            android:src="@drawable/arrow_back" />

        <ImageView
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_50sdp"
            android:src="@drawable/loading" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/edt_otp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/lato_bold"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/we_sent_a_code"
                android:textColor="@color/white"
                android:textSize="@dimen/_22sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/lato_bold"
                android:gravity="center"
                android:text="@string/please_enter_the_verification_code"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/lato_bold"
                android:gravity="center"
                android:text="@string/that_has_been_sent_to_you_via_sms_at"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp"
                android:fontFamily="@font/lato_bold"
                android:gravity="center"

                android:padding="@dimen/_10sdp"
                android:text="@string/_202_505_0126"
                android:textColor="@color/white"
                android:textSize="@dimen/_22sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/edt_otp"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:background="@color/white"
            android:digits="0123456789"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:inputType="number"
            android:letterSpacing="0.5"
            android:maxLength="5"
            android:padding="@dimen/_10sdp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_22sdp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="@dimen/_170sdp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_otp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/normal_btn_back"
            android:elevation="@dimen/_15sdp"
            android:onClick="@{(v) -> OTPViewModel.onClickSubmit(v)}"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txt_resend"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:text="@string/didn_t_get_a_code"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_resend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_30sdp"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:text="@string/resend"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

    </RelativeLayout>

</layout>