<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:background="@color/black"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_medal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:padding="@dimen/_2sdp"
        android:src="@drawable/medal" />

    <TextView
        android:id="@+id/text_winner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:text="@string/winner"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_ans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"

        android:text="@string/ans_first"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_16sdp" />

    <TextView
        android:id="@+id/text_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:text="@string/level"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:background="@drawable/btn_pink_filled">


        <TextView
            android:id="@+id/txt_points"
            android:background="@drawable/circle_white"
            android:layout_width="wrap_content"
            android:text=""
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/color_pink"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingRight="@dimen/_20sdp"
            android:layout_height="match_parent">

        </TextView>

    </LinearLayout>


</LinearLayout>